Fix swagger endpoint, add TTS play=false
